2004-11-20  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (libpthread-routines): Add vars.
	* sysdeps/pthread/createthread.c (__pthread_multiple_threads): Remove.
	* init.c (__default_stacksize, __is_smp): Remove.
	* vars.c: New file.
	* pthreadP.h (__find_thread_by_id): If !SHARED, add weak_function
	and define a wrapper macro.
	(PTHREAD_STATIC_FN_REQUIRE): Define.
	* allocatestack.c (__find_thread_by_id): Undefine.
	* pthread_create (__pthread_keys): Remove.
	(pthread_mutex_lock, pthread_mutex_unlock, pthread_once,
	pthread_key_create, pthread_setspecific, pthread_getspecific): Add
	PTHREAD_STATIC_FN_REQUIRE.

2004-11-18  Kaz Kojima  <kkojima@rr.iij4u.or.jp>

	* sysdeps/sh/tls.h (DB_THREAD_SELF): Set the correct bias
	parameter to REGISTER macro.

2004-11-17  Roland McGrath  <roland@redhat.com>

	* sysdeps/unix/sysv/linux/timer_routines.c (__start_helper_thread):
	Make sure SIGCANCEL is blocked as well.

2004-11-10  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/pthread/setxid.h: New file.
	* sysdeps/pthread/pthread-functions.h (HAVE_PTR__NPTL_SETXID): Remove.
	(struct xid_command): Add forward decl.
	(struct pthread_functions): Change return type of __nptl_setxid hook
	to int.
	* pthreadP.h (__nptl_setxid): Change return type to int.
	* allocatestack.c (__nptl_setxid): Call INTERNAL_SYSCALL_NCS in the
	calling thread, return its return value and set errno on failure.
	* descr.h (struct xid_command): Change id type to long array.

	* Makefile: Add rules to build and test tst-setuid1 and
	tst-setuid1-static.
	* tst-setuid1.c: New test.
	* tst-setuid1-static.c: New test.

2004-11-10  Jakub Jelinek  <jakub@redhat.com>

	* Makefile (tests): Add tst-exit3.
	* tst-exit3.c: New test.

2004-11-09  Ulrich Drepper  <drepper@redhat.com>

	* Makefile (tests): Add tst-exit2.
	* tst-exit2.c: New file.

2004-11-09  Roland McGrath  <roland@redhat.com>

	[BZ #530]
	* sysdeps/pthread/createthread.c (do_clone): Increment __nptl_nthreads
	here, before calling clone.