@@ -515,6 +515,7 @@ PTHREAD_STATIC_FN_REQUIRE (pthread_mutex_lock)
 PTHREAD_STATIC_FN_REQUIRE (pthread_mutex_unlock)
 
 PTHREAD_STATIC_FN_REQUIRE (pthread_once)
+PTHREAD_STATIC_FN_REQUIRE (pthread_cancel)
 
 PTHREAD_STATIC_FN_REQUIRE (pthread_key_create)
 PTHREAD_STATIC_FN_REQUIRE (pthread_setspecific)
